test/results/parser/misc_js.txt
misc/js
=======
Passed:       29/29 (100.00%)
Failed:       0
AST mismatch: 0/29

✓ test/parser/misc/js/accessor-line-terminator.js
✓ test/parser/misc/js/async-arrow-function-line-terminator-1.js
error: Unexpected '=>'
   |
 1 | const testVariable = async
   |                      ^^^^^
 2 | () => {}
   | ^^
 3 | 
   |
   = help: '=>' is only valid after a single identifier or a parenthesized parameter list


✓ test/parser/misc/js/async-arrow-function-line-terminator-2.js
✓ test/parser/misc/js/async-function-call-with-arguments.js
✓ test/parser/misc/js/async-function-call-with-spread-arguments.js
✓ test/parser/misc/js/async-function-call.js
✓ test/parser/misc/js/async-function-line-terminator-1.js
✓ test/parser/misc/js/async-function-line-terminator-2.js
✓ test/parser/misc/js/async-function.js
✓ test/parser/misc/js/await-exponentiation-left.module.js
error: The left-hand side of '**' cannot be an unparenthesized await expression
   |
 1 | await promise ** 2;
   | ^^^^^^^^^^^^^
 2 | 
   |
   = help: Add parentheses to make precedence explicit, for example `(await x) ** y`.


✓ test/parser/misc/js/await-using-new-line.js
✓ test/parser/misc/js/await-using.js
✓ test/parser/misc/js/bigint-class-property-key.js
✓ test/parser/misc/js/bigint-object-key.js
✓ test/parser/misc/js/class-extends-simple-arrow-function.js
error: Expected '{' to start class body, but found '=>'
   |
 1 | var C = class extends async => {} {
   |                             ^^
 2 | };
   |
   = help: Class body must be enclosed in braces: class Name { ... }


✓ test/parser/misc/js/class-static-block-await-context.js
✓ test/parser/misc/js/dynamic-import-in-script.js
✓ test/parser/misc/js/dynamic-import.module.js
✓ test/parser/misc/js/export-default-using.module.js
error: Expected a semicolon or an implicit semicolon after a statement, but found 'resource'
   |
 1 | export default using resource = Bun;
   |                      ^^^^^^^^
 2 | 
   |
   = help: Try inserting a semicolon here


✓ test/parser/misc/js/for-await-errors.module.js
error: 'for await' is only valid with for-of loops
   |
 1 | async function f() {
 2 |   for await (;;) {}
   |              ^
 3 |   for await (x in y) {}
   |

✓ test/parser/misc/js/for-using-with-line-terminator.js
error: Expected ';' after for-loop init, but found 'id'
   |
 1 | for (using
 2 | id = value;;) {
   | ^^
 3 | 
   |

✓ test/parser/misc/js/import-defer-normal.module.js
✓ test/parser/misc/js/import-defer-original.module.js
✓ test/parser/misc/js/import-expression-call.js
✓ test/parser/misc/js/just-await-using.js
✓ test/parser/misc/js/tagged-template-with-optional-chaining.js
error: Tagged template expressions are not permitted in an optional chain
   |
 1 | tagFunction?.pass``;
   |                  ^^
 2 | 
   |
   = help: Remove the optional chaining operator '?.' before the template literal or add parentheses.


✓ test/parser/misc/js/tagged-template.js
✓ test/parser/misc/js/using-export.module.js
error: Expected declaration after 'export', but found 'using'
   |
 1 | export using resource = Bun;
   |        ^^^^^
 2 | 
   |
   = help: Use 'export var', 'export let', 'export const', 'export function', or 'export class'


✓ test/parser/misc/js/using-var.js
